RESOLVED FIXED114320
REGRESSION: Blob URLs broken with NetworkProcess
https://bugs.webkit.org/show_bug.cgi?id=114320
Summary REGRESSION: Blob URLs broken with NetworkProcess
Alexey Proskuryakov
Reported 2013-04-09 16:45:36 PDT
NetworkResourceLoader now requires use of didReceiveBuffer instead of didReceiveData, and it also requires didReceiveResponseAsync.
Attachments
proposed fix (3.68 KB, patch)
2013-04-09 16:55 PDT, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2013-04-09 16:51:47 PDT
Alexey Proskuryakov
Comment 2 2013-04-09 16:55:56 PDT
Created attachment 197188 [details] proposed fix
Alexey Proskuryakov
Comment 3 2013-04-09 17:03:32 PDT
Note You need to log in before you can comment on or make changes to this bug.